--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.8",
     "nodemon": "^3.1.3",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "swagger-ui-express": "^5.0.1"
   }
 }
