--- a/docs.yaml
+++ b/docs.yaml
@@ -92,7 +92,7 @@ paths:
       tags:
         - User
       security:
-        - basicAuth: []
+        - jwtAuth: []
       requestBody:
         required: true
         content:
@@ -139,7 +139,7 @@ paths:
       tags:
         - User
       security:
-        - basicAuth: []
+        - jwtAuth: []
       requestBody:
         required: true
         content:
@@ -180,7 +180,7 @@ paths:
       tags:
         - User
       security:
-        - basicAuth: []
+        - jwtAuth: []
       requestBody:
         required: true
         content:
@@ -221,7 +221,7 @@ paths:
       tags:
         - User
       security:
-        - basicAuth: []
+        - jwtAuth: []
       responses:
         '200':
           description: User profile
@@ -274,9 +274,9 @@ paths:
     post:
       summary: Add food item to a meal table
       tags:
-        - Meal
+        - Nutrition
       security:
-        - basicAuth: []
+        - jwtAuth: []
       parameters:
         - in: path
           name: table
@@ -324,9 +324,9 @@ paths:
     get:
       summary: Get user's food entries in the last 7 hours
       tags:
-        - Meal
+        - Nutrition
       security:
-        - basicAuth: []
+        - jwtAuth: []
       responses:
         '200':
           description: User food entries retrieved successfully
@@ -415,9 +415,10 @@ paths:
 
 components:
   securitySchemes:
-    basicAuth:
-      type: http
-      scheme: basic
+    jwtAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     User:
       type: object
