--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^137.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.8",
     "nodemon": "^3.1.3",
